--- a/TareaEvaluable/estilos.css
+++ b/TareaEvaluable/estilos.css
@@ -1,16 +1,93 @@
+* {
+    border: 1px solid red;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
-    background-color: #f2bb16;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+}
+
+header {
+    display: flex;
+    flex-flow: column;
+    margin-bottom: 10px;
+}
+
+.titular {
+    /* border: 1px solid red; */
+    display: flex;
+    /* Usar contenido manera flexible */
+    justify-content: space-around;
+    /* Separacion alrededor de los items */
+
+}
+
+.titular img {
+    width: 15%;
+    max-width: 100px;
 }
 
 .encabezado {
+    width: 75%;
     display: flex;
-    max-height: 150px;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.logo {
-    width: 15%;
+nav {
+    display: flex;
+    justify-content: space-around;
+    margin: 20px;
 }
 
-.titulo {
-    width: 85%;
+main {
+    display: flex;
+    justify-content: space-around;
+    flex: 1;
+}
+
+aside {
+    width: 30%;
+}
+
+article {
+    display: flex;
+    width: 60%;
+    justify-content: space-around;
+}
+
+.textoart {
+    width: 60%;
+}
+
+.textoart * {
+    padding: 10px;
+}
+
+.imagen {
+    width: 150px;
+    height: 100px;
+    margin: 10px auto;
+}
+
+.imagencuadrada {
+    width: 100px;
+    height: 100px;
+    margin: 10px auto;
+}
+
+footer {
+    margin-top: 10px;
+    padding: 15px;
+}
+
+.contenido .imagencuadrada {
+    float: left;
+    margin: 0 5px;
 }
