--- a/TareaEvaluable/estilos.css
+++ b/TareaEvaluable/estilos.css
@@ -1,8 +1,12 @@
 * {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+h1,h2,h3,h4,h5 {
+    font-family: "Lilita One", sans-serif;
 }
 
 body {
@@ -10,12 +14,15 @@ body {
     flex-direction: column;
     min-height: 100vh;
     margin: 0;
+    background-color: #f2bb16;
+    font-family: "Chakra Petch", sans-serif;
 }
 
 header {
+    margin: 2% 0;
     display: flex;
     flex-flow: column;
-    margin-bottom: 10px;
+    margin-bottom: 1%;
 }
 
 .titular {
@@ -29,7 +36,8 @@ header {
 
 .titular img {
     width: 15%;
-    max-width: 100px;
+    max-width: 150px;
+    margin: -1% 0;
 }
 
 .encabezado {
@@ -38,12 +46,33 @@ header {
     flex-flow: column;
     justify-content: center;
     align-items: center;
+    background-color: #d9d3b8;
 }
 
 nav {
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    align-self: center;
     margin: 20px;
+    background-color: #d9d3b8;
+    width: 80%;
+    border: 1px solid black;
+    border-radius: 7px;
+}
+
+nav a {
+    text-decoration: none;
+    padding: 0.5% 0;
+    color: green;
+}
+
+nav a:hover {
+    color: red;
+}
+
+nav a.casa {
+    float: left;
 }
 
 main {
@@ -52,8 +81,18 @@ main {
     flex: 1;
 }
 
+main > * {
+    border: 1px solid black;
+    border-radius: 6px;
+    background-color: #d9d3b8;
+}
+
 aside {
     width: 30%;
+}
+
+.galeria {
+    margin: 1%;
 }
 
 article {
@@ -83,8 +122,11 @@ article {
 }
 
 footer {
-    margin-top: 10px;
+    margin: 2% ;
     padding: 15px;
+    background-color: #d9d3b8;
+    border-radius: 7px;
+    border: 1px solid black;
 }
 
 .contenido .imagencuadrada {
