--- a/TareaEvaluable/estiloscompra.css
+++ b/TareaEvaluable/estiloscompra.css
@@ -1,4 +1,4 @@
-article{
+article {
     width: 85%;
     display: flex;
     flex-wrap: wrap;
@@ -9,12 +9,21 @@ article{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: start;
     height: 200px;
+    width: 125px;
     margin: 20px;
-    background-color: #d9d3b8;
+    border: 2px solid black;
+    border-radius: 7px;
+    background-color: #e2d182;
 }
 
-.producto button{
+.producto:hover {
+    transform: scale(107%);
+    box-shadow: 5px 5px 5px #93a651;
+}
+
+.producto button {
     font-family: "Chakra Petch", sans-serif;
     color: white;
     margin: 10px 0;
@@ -24,7 +33,17 @@ article{
     border-radius: 6px;
 }
 
-.producto button:hover{
+.producto button:hover {
     border: 2px solid blue;
     background-color: rgb(45, 194, 207);
+}
+
+.producto img {
+    margin: 0;
+    width: 100%;
+    height: 120px;
+    border-radius: 5px 5px 0 0;
+    background-size: cover;
+    margin-bottom: 6px;
+    /* background-image: url(image/miel.jpg); */
 }
