--- a/TareaEvaluable/estilos.css
+++ b/TareaEvaluable/estilos.css
@@ -80,10 +80,6 @@ nav div {
     filter: drop-shadow(3px 3px 1px gray);
 }
 
-/* nav a.casa {
-    float: left;
-} */
-
 main {
     display: flex;
     justify-content: space-around;
@@ -119,20 +115,21 @@ article {
 }
 
 .imagen {
-    width: 200px;
-    height: 150px;
+    max-width: 75%;
+    height: auto;
     margin: 10px auto;
     display: flex;
 }
 
 .imagencuadrada {
-    width: 150px;
-    height: 150px;
+    max-width: 80%;
+    height: auto;
     margin: 10px auto;
     display: flex;
 }
 
 .contenido .imagencuadrada {
+    width: 150px;
     float: left;
     margin: 0 5px;
 }
